--- a/index.html
+++ b/index.html
@@ -1,41 +1,41 @@
-<fixme>
-	<fixme lang="fr">
+<!DOCTYPE html>
+	<html lang="fr">
 
-	<fixme>
-    	<fixme charset="UTF-8">
+	<head>
+    	<meta charset="UTF-8">
     	<meta http-equiv="X-UA-Compatible" content="IE=edge">
     	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-    	<fixme>Tech Returners Surgery: Home</fixme>
-	</fixme>
+    	<title>Tech Returners Surgery: Home</title>
+	</head>
 
-	<fixme>
-		<fixme>
+	<body>
+		<header>
 			<a href="#">Tech Returners Surgery</a>
 			<a href="tel:03330509138">0333 050 9138</a>
-		</fixme>
+		</header>
 
-		<fixme>
-			<fixme>
-				<fixme><a href="#">Home</a></fixme>
-				<fixme><a href="#">Services</a></fixme>
-				<fixme><a href="#">Team</a></fixme>
-				<fixme><a href="#">Patient Information</a></fixme>
-				<fixme><a href="#">Well-being Centre</a></fixme>
-			</fixme>
-		</fixme>
+		<nav>
+			<ul>
+				<li><a href="#">Home</a></li>
+				<li><a href="#">Services</a></li>
+				<li><a href="#">Team</a></li>
+				<li><a href="#">Patient Information</a></li>
+				<li><a href="#">Well-being Centre</a></li>
+			</ul>
+		</nav>
 
 		<label for="site-search">Search...</label>
 		<input type="search" id="site-search" name="search" aria-label="Search through site content">
-		<fixme>Search</fixme>
+		<input type="button">
 
 		<section>
-			<h3><fixme>COVID Restriction Update</fixme></h3>
+			<h3><strong>COVID Restriction Update - Hi Testing only</strong></h3>
 
 			<p>Throughout the pandemic we have strove to make the surgery as safe as possible for all our patients and
 				staff, we will continue to do so.</p>
 
-			<p>From the <fixme>19th July 2021 nothing will change at the Surgery</fixme> Patients will <fixme>still
-					need</fixme> to
+			<p>From the <strong>19th July 2021 nothing will change at the Surgery</strong> Patients will <em>still
+					need</em> to
 				wear a mask, socially distance and use hand sanitiser in the surgery and staff will continue to
 				wear PPE.
 			</p>
@@ -121,5 +121,5 @@
 				</fieldset>
 			</fixme>
 		</fixme>
-	</fixme>
-</fixme>
+	</body>
+	</html>
